# CAE-Agent-Hub

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
MCP/Abaqus/: .env.example  .gitignore  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  abaqus_mcp_plugin.py  abaqus_v6.env.example  mcp_server.py  pyproject.toml  stop_mcp.py
MCP/Abaqus/abaqus_plugins/mcp_control/: __init__.py  mcp_control_plugin.py
MCP/Abaqus/examples/: mcp_config.example.json
MCP/Ansys/AEDT MCP/: README.md  README.zh-CN.md  aedt_launcher.py  mcp_server.py  pyaedt_backend.py  pyaedt_worker.py  pyproject.toml  worker_client.py  worker_protocol.py  wr90_case.py
MCP/Ansys/AEDT MCP/scripts/: hold_live_mcp_session.py  run_live_acceptance.ps1
MCP/COMSOL/: .env.example  .gitignore  README.md  README.zh-CN.md  mcp_server.py  pyproject.toml
MCP/COMSOL/bridge/: pom.xml
MCP/COMSOL/bridge/src/main/java/com/caeagenthub/comsol/: BridgeBackend.java  ComsolBridge.java  JsonCodec.java  PlaceholderBackend.java  ReflectiveComsolBackend.java
MCP/COMSOL/examples/: codex_config.example.toml  open_solve_export.py
MCP/COMSOL/tests/: test_bridge_client.py  test_detect.py  test_mph_session.py  test_mphserver_process.py  test_protocol.py
MCP/COMSOL/tools/: __init__.py  bridge_client.py  detect.py  model_tools.py  mph_session.py  mphserver_process.py  protocol.py
Skill/: README.md  README.zh-CN.md
Skill/abaqus/: README.md  README.zh-CN.md
docs/superpowers/plans/: 2026-06-27-pyaedt-mcp-redesign.md
docs/superpowers/specs/: 2026-06-27-pyaedt-mcp-redesign.md
(+8 files in other folders)
