[project]
name = "comsol-mcp"
version = "0.1.0"
description = "MCP server for controlling COMSOL Multiphysics through a Java API bridge"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "mph>=1.3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["mcp_server"]
packages = ["tools"]

[tool.uv]
package = false
